bynkc/tests/fixtures/negative/240_store_after_handler/src/demo/a.bynk
context demo.a

agent Counter {
  key id: String

  store count: Cell[Int]

  on call bump() -> Effect[()] {
    ()
  }

  store extra: Cell[Int] = 0
}
